# python-project-stub

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  _setup.py  makefile  meta.sh  pyproject.toml  setup.cfg
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js  tutorial.html
docs/_sources/: index.rst.txt  tutorial.rst.txt
docs/_sources/tutorial/: build_docs.rst.txt  build_package.rst.txt  download_realpypi.rst.txt  index.rst.txt  initial_setup.rst.txt  other_resources.rst.txt
docs/tutorial/: build_docs.html  build_package.html  download_realpypi.html  download_testpypi.html  github_repo_setup.html  index.html  initial_setup.html  other_resources.html  upload_realpypi.html  upload_testpypi.html
docs_source/: README  index_body.rst
docs_source/tutorial/: download_testpypi.rst  github_repo_setup.rst  upload_realpypi.rst  upload_testpypi.rst
python_project_stub/: __init__.py  __main__.py  main.py  meta.py  meta.sh
src/python_project_stub/: __main__.py  meta.py  meta.sh
src/python_project_stub/data/: quote.txt
