[build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"
[project]
    name = "python-project-stub"
    version = "0.0.0"
    authors = [
        {name = "Jacob Striebel"}
    ]
    description = "Python project stub"
[project.urls]
    "Homepage" = "https://github.com/striebel/python-project-stub"
